--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <title>Betonwerken & Betonkelders in Limburg | Concrete Projects</title>
   <link rel="canonical" href="https://www.concreteprojectsbv.be/">
   <link rel="stylesheet" href="style.css" />
-   <link rel="icon" type="image/jpg" href="images/logo.png">
+   <link rel="icon" type="image/png" href="images/logo.png">
   <meta name="description" content="Concrete Projects B.V. - Specialisten in betonkelders, betonnen wanden, netten leggen, zwembaden en polieren. Onderwijsstraat 12, Beverlo." />
   <meta name="keywords" content="betonkelders, betonvloeren, netten leggen, bekisting, polieren, betonwerken, Limburg, Beverlo" />
   <meta name="author" content="Concrete Projects B.V." />
